tests/resource/valid/class/tuple_as_class.mamba
class MyTuple: (Int, Int, Str)
