tests/resource/invalid/type/class/undefined_parent_in_tuple.mamba
class MyClass: (Int, Int, UndefinedClass)
